--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "hardhat": "^2.10.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.2"
+    "@openzeppelin/contracts": "^4.7.2",
+    "axios": "^0.27.2"
   }
 }
