--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@openzeppelin/hardhat-upgrades": "^1.19.1",
-    "hardhat": "^2.10.1"
+    "dotenv": "^16.0.1",
+    "hardhat": "^2.10.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.2"
+    "@openzeppelin/contracts": "^4.7.2",
+    "axios": "^0.27.2"
   }
 }
