--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.2",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "hardhat-deploy": "^0.11.12"
   }
 }
