--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "hardhat-project",
+  "name": "fixel",
+  "version": "1.0.0",
+  "description": "# Deploy",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "@openzeppelin/hardhat-upgrades": "^1.19.1",
-    "dotenv": "^16.0.1",
-    "hardhat": "^2.10.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "@openzeppelin/contracts": "^4.7.3",
+    "hardhat": "^2.10.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.2",
-    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "hardhat-deploy": "^0.11.12"
   }
 }
